Solved bug #10: Error using multiple server/repos: https://github.com/coderazzi/aws_codeartifact_maven/issues/10